--- a/dev.env
+++ b/dev.env
@@ -1,3 +1,3 @@
 FruitSupplierUrl=https://my-json-server.typicode.com/2020-abhilash/mock-api/fruits
-export VegetableSupplier=https://my-json-server.typicode.com/2020-abhilash/mock-api/vegetables
-export GrainSupplier=https://my-json-server.typicode.com/2020-abhilash/mock-api/grains
+VegetableSupplier=https://my-json-server.typicode.com/2020-abhilash/mock-api/vegetables
+GrainSupplier=https://my-json-server.typicode.com/2020-abhilash/mock-api/grains
