--- a/dev.env
+++ b/dev.env
@@ -1,3 +1,4 @@
+Port=3000
 FruitSupplierUrl=https://my-json-server.typicode.com/2020-abhilash/mock-api/fruits
 VegetableSupplier=https://my-json-server.typicode.com/2020-abhilash/mock-api/vegetables
 GrainSupplier=https://my-json-server.typicode.com/2020-abhilash/mock-api/grains
